First UI design. Designed the frame of the application and added listening_dialog.fxml