@@ -15,9 +15,20 @@ javafx {
 
 mainClassName = "$moduleName/com.rtkay.Launcher"
 
+applicationDefaultJvmArgs = ['--add-opens=java.base/java.lang.reflect=com.jfoenix']
+
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'Kayla'
     }
+}
+
+dependencies{
+    implementation 'org.kordamp.ikonli:ikonli-javafx:11.5.0'
+    implementation 'com.jfoenix:jfoenix:9.0.10'
+    implementation 'org.kordamp.ikonli:ikonli-feather-pack:11.5.0'
+    implementation 'io.github.typhon0:AnimateFX:1.2.1'
+
+
 }
